# redis

./: .clang-format  .clang-tidy  CMakeLists.txt
docs/: milestone_10_design.md  milestone_11_design.md  milestone_12_design.md  milestone_13_design.md  milestone_14_design.md  milestone_15_design.md  milestone_16_design.md  milestone_17_design.md  milestone_18_design.md  milestone_19_design.md  milestone_1_design.md  milestone_20_design.md  milestone_2_design.md  milestone_3_design.md  milestone_4_design.md  milestone_5_design.md  milestone_6_design.md  milestone_7_design.md  milestone_8_design.md  milestone_9_design.md
src/memory/: allocator.cpp  allocator.h
src/network/: connection_manager.cpp  connection_manager.h  event_loop.cpp  event_loop.h  socket.cpp  socket.h  tcp_server.cpp  tcp_server.h
src/persistence/: aof.cpp  aof.h  rdb.cpp  rdb.h
src/protocol/: resp_parser.cpp  resp_parser.h  resp_types.cpp  resp_types.h
src/server/: command_handler.cpp  command_handler.h  main.cpp  pubsub.cpp  pubsub.h
src/storage/: dict.cpp  dict.h  skiplist.cpp  skiplist.h  value.cpp  value.h
src/utils/: logger.h
tests/: aof_test.cpp  eviction_test.cpp  expiration_test.cpp  hash_test.cpp  list_test.cpp  memory_test.cpp  network_test.cpp  pipelining_test.cpp  pubsub_test.cpp  rdb_test.cpp  resp_test.cpp  set_hash_test.cpp  set_test.cpp  storage_test.cpp  transaction_test.cpp  watch_test.cpp  zset_test.cpp
tools/: benchmark.cpp
